--- a/src/views/general/index.html
+++ b/src/views/general/index.html
@@ -1,3 +1,19 @@
-<h3>Index</h3>
-
-{{posts}}
+<div class="container">
+  <h3>Index</h3>
+  
+  <div class="media" ng-repeat="post in posts track by $index">
+    <div class="media-left">
+      <div class="score text-center">
+        {{post.score}}
+      </div>
+    </div>
+    <div class="media-left">
+      <img class="media-object" ng-src="{{post.content}}" alt="...">
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading"><a href="{{post.url}}">{{post.title}}</a></h4>
+      <span>Submitted <span am-time-ago='post.createdAt'></span> by {{post.author}} to /r/{{post.subreddit}}</span>
+      <h6 class='commentLink'><a href="#">comments</a></h6>
+    </div>
+  </div>
+</div>
