--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -11,7 +11,8 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="index"><i class="fa fa fa-home">&nbsp; Home</i></a></li>
-        <li><a ui-sref="users.login"><i class="fa fa fa-sign-in">&nbsp; Login</i></a></li>
+        <li ng-hide='auth'><a ui-sref="users.login"><i class="fa fa fa-sign-in">&nbsp; Login</i></a></li>
+        <li ng-show='auth'><a ng-click='logout()'><i class="fa fa fa-sign-out">&nbsp; Logout</i></a></li>
       </ul>
     </div>
   </div>
