--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -6,11 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a ui-sref="home" class="navbar-brand">Reddit B</a>
+      <a ui-sref="home" class="navbar-brand">Reddit Clone</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="index"><i class="fa fa fa-home">&nbsp; Home</i></a></li>
+        <li ng-show='auth'><a ui-sref="newPost"><i class="fa fa fa-plus">&nbsp; New post</i></a></li>
         <li ng-hide='auth'><a ui-sref="users.login"><i class="fa fa fa-sign-in">&nbsp; Login</i></a></li>
         <li ng-show='auth'><a ng-click='logout()'><i class="fa fa fa-sign-out">&nbsp; Logout</i></a></li>
       </ul>
